# symmetria-ide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  neovim.yml  pyproject.toml  selene.toml  stylua.toml
.claude/: project-standards.md
.github/: CODEOWNERS
docs/: architecture.md  dev-workflow.md  future.md  identity.md  phases.md  references.md  tech-stack.md  vision.md
qml/: CommandLine.qml  Main.qml  StatusBar.qml  WhichKeyOverlay.qml
runtime/: init.lua
runtime/lua/orchestrator/whichkey/: constants.lua  icons.lua  init.lua  presets.lua  state.lua  tree.lua  triggers.lua
src/symmetria_ide/: __init__.py  __main__.py  app.py  grid.py  keys.py  nvim_backend.py  nvim_view.py
tests/: test_app_models.py  test_cursor_animation.py  test_grid.py  test_keys.py  test_nvim_backend_shutdown.py  test_nvim_view_cache.py  test_scroll_animation.py  test_transparent_mode.py
