[project]
name = "symmetria-ide"
version = "0.0.1"
description = "A custom IDE wrapper built on NeoVim, in the Symmetria ecosystem."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Juan Caceres Callieri", email = "cacerescallieri@gmail.com" },
]

dependencies = [
    "PySide6>=6.7",
    "pynvim>=0.5",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Phase 2 terminal emulation (not yet imported in Phase 0).
terminal = ["ptyprocess>=0.7", "pyte>=0.8"]

[project.scripts]
symmetria-ide = "symmetria_ide.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
symmetria_ide = ["qml/*.qml", "runtime/*.lua"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
